--- a/wdd130/week1/byui.html
+++ b/wdd130/week1/byui.html
@@ -16,7 +16,7 @@
       <li><a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a></li>
       <li><a href="positioning.html">Positioning Activity</a></li>
       <li><a href="#">Personal Website</a></li>
-      <li><a href="#">Personal Siteplan</a></li>
+      <li><a href="own/site-plan.html">Personal Siteplan</a></li>
     </nav>
   </ul>  
     <p>Owusu Emmanuel Manu - WDD130</p>
