--- a/wdd130/week1/own/site-plan.html
+++ b/wdd130/week1/own/site-plan.html
@@ -7,7 +7,12 @@
   <title>Owusu Emmanuel Manu</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&family=Rock+Salt&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Roboto:ital,wght@1,500&family=Rock+Salt&family=Sacramento&display=swap" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="style/site-plan.css" />
 </head>
 <body>
@@ -33,7 +38,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/yawus-logos.jpeg" alt="Logo image" width="100" height="100" />
+    <img src="images/yawus-logos.jpeg" alt="Logo image" width="150" height="150" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -69,7 +74,7 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Rock Salt
+      Heading Font: Sacramento, cursive;
       <!-- change this -->
     </h4>
     <h4>
@@ -109,6 +114,12 @@
       <div class="right">&nbsp;</div>
     </div>
     <hr />
+    <h3>Home Page Images</h3>
+    <p>Which consist of the cloud image and the mountain image</p>
+    <img src="images/cloud.png" alt="home page images">
+    <img src="images/mountain.png">
+    <h3>Work Page</h3>
+    <img src="images/second.png">
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
