--- a/wdd130/week1/own/site-plan.html
+++ b/wdd130/week1/own/site-plan.html
@@ -96,18 +96,18 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">About</a>
-      <a href="#">Work</a>
-      <a href="#">Note</a>
+      <a href="#">Page 2</a>
+      <a href="#">Page 3</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">About</div>
       <div class="sm-page2">
-        [work]
+        [Page 2]
         <!-- this page will have a name later -->
       </div>
-      <div class="sm-page3">Note</div>
+      <div class="sm-page3">Page 3</div>
 
       <div class="top">&nbsp;</div>
       <div class="left">&nbsp;</div>
