--- a/wdd130/week1/own/site-plan.html
+++ b/wdd130/week1/own/site-plan.html
@@ -104,10 +104,10 @@
     <div class="sitemap">
       <div class="sm-home">About</div>
       <div class="sm-page2">
-        [Page 2]
+        [About]
         <!-- this page will have a name later -->
       </div>
-      <div class="sm-page3">Page 3</div>
+      <div class="sm-page3">Note</div>
 
       <div class="top">&nbsp;</div>
       <div class="left">&nbsp;</div>
@@ -119,7 +119,22 @@
     <img src="images/cloud.png" alt="home page images">
     <img src="images/mountain.png">
     <h3>Work Page</h3>
+    <p>this images are to show trust to my customers or those who will be doing bussiness with me.</p>
+    <h3>Hi. I’m Owusu Manu.</h3>
+        <h3>A Designer.</h3>
+    <p>I'm likewise a front-end engineer and graphic designer with passion for making drawing in UI, rejuvenating items.</p>
     <img src="images/second.png">
+    <img src="images/trust_icon.png" alt="trust image">
+    <h3>Note Page</h3>
+    <p>I'm Owusu Manu, an Item Fashioner turning out from a distance for Assist with exploring on their portable items in Ghana, West Africa.</p>
+    <p>I've gone through the past 12+ years working across various areas of advanced plan; front-end improvement, email configuration, advertising site pages, application UI/UX, to my ongoing job planning items for versatile stages.</p>
+
+        Nowadays my time is spent exploring, planning, prototyping, and coding. I likewise assist architects with getting everything rolling with their vocations.
+        
+        Out of the workplace you'll find me longing for soccer, playing low register guitar, and petting every one of the great canines.</p>
+    <p>This images is to show the love and equality i have for my Customers.</p>
+    <img src="images/love_icon.png" alt="love icon">
+    <img src="images/equality_icon.png" alt="equality icon">
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
