--- a/wdd130/week1/wwr/contactus.html
+++ b/wdd130/week1/wwr/contactus.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/contact.css">
+  <script src="https://kit.fontawesome.com/eb49bef97d.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Roboto:ital,wght@1,500&family=Rock+Salt&family=Sacramento&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <title>Contact uS</title>
@@ -22,10 +24,20 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-
-    </header>
-    <main>
-
+    <main class="contact">
+       <div contact-form>
+        <h1>Contact <span>Us</span></h1>
+        <p>Welcome to Our contact Me Forms.</p>
+        <form action="" aria-placeholder="Your Name" required>
+            <input type="email" name="email" id="" placeholder="E-mail" required>
+            <input type="" placeholder="Write a Subbject" required>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="Submit" name="" value="Submit" class="btn">
+        </form>
+       </div>
+       <div class="contact-img">
+        <img src="images/mountains.jpg" alt="mountain">
+       </div>
     </main>
     <footer>
         <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
