--- a/wdd130/week1/byui.html
+++ b/wdd130/week1/byui.html
@@ -15,7 +15,7 @@
       <li><a href="wwr/index.html">White Water Rafting Website</a></li>
       <li><a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a></li>
       <li><a href="positioning.html">Positioning Activity</a></li>
-      <li><a href="#">Personal Website</a></li>
+      <li><a href="personal-web.html">Personal Website</a></li>
       <li><a href="own/site-plan.html">Personal Siteplan</a></li>
     </nav>
   </ul>  
