--- a/wdd130/week1/wwr/contactus.html
+++ b/wdd130/week1/wwr/contactus.html
@@ -9,10 +9,10 @@
   <script src="https://kit.fontawesome.com/eb49bef97d.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Roboto:ital,wght@1,500&family=Rock+Salt&family=Sacramento&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <title>Contact uS</title>
+  <title>Contact Us</title>
 </head>
 <body>
-    <div id="feedback"></div>
+    <div id="feedback">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -25,18 +25,54 @@
         </nav>
     </header>
     <main class="contact">
-       <div contact-form>
-        <h1>Contact <span>Us</span></h1>
-        <p>Welcome to Our contact Me Forms.</p>
-        <form action="" aria-placeholder="Your Name" required>
-            <input type="email" name="email" id="" placeholder="E-mail" required>
-            <input type="" placeholder="Write a Subbject" required>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="Submit" name="" value="Submit" class="btn">
-        </form>
+       <div class="content">
+        <h2>Contact Us</h2>
+        <p>Welcome To Our Dry OAR Contact Page, Please We At Your Service</p>
        </div>
-       <div class="contact-img">
-        <img src="images/mountains.jpg" alt="mountain">
+       <div class="container">
+        <div class="contactinfo">
+            <div class="box">
+                <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
+                <div class="text">
+                    <h3>Address</h3>
+                    <p>Post Office Box BP 30,<br>Bantama,Kumasi,<br>AK-800-8181</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa-solid fa-phone"></i></div>
+                <div class="text">
+                    <h3>Phone</h3>
+                    <p>+2335-5457-1520</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa-solid fa-envelope"></i></div>
+                <div class="text">
+                    <h3>Email</h3>
+                    <p>pintechofficial@gmail.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="contactform">
+            <form>
+                <h2>Send Message</h2>
+                <div class="inputBox">
+                    <input type="text" name="" required="required">
+                    <span>Full name</span>
+                </div>
+                <div class="inputBox">
+                    <input type="text" name="" required="required">
+                    <span>Email</span>
+                </div>
+                <div class="inputBox">
+                    <textarea required="required"></textarea>
+                    <span>Type your Message...</span>
+                </div>
+                <div class="inputBox">
+                    <input type="submit" name="" value="send">
+                </div>
+            </form>
+        </div>
        </div>
     </main>
     <footer>
@@ -55,6 +91,8 @@
             </a>
         </div>
     </footer>
+
+</div>
 
     
 <script>
