--- a/wdd130/week1/wwr/index.html
+++ b/wdd130/week1/wwr/index.html
@@ -19,7 +19,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="rivers.html">Rivers Page</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -62,7 +62,7 @@
     </main>
     <!-- footer section -->
     <footer>
-        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+        <p>Dry Oar &copy; 2022 - Owusu Manu Emmanuel</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
