--- a/wdd130/week1/wwr/contactus.html
+++ b/wdd130/week1/wwr/contactus.html
@@ -1,116 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/contact.css">
-  <script src="https://kit.fontawesome.com/eb49bef97d.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Roboto:ital,wght@1,500&family=Rock+Salt&family=Sacramento&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <title>Contact Us</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="styles/style.css" />
+    <link type="text/css" rel="stylesheet" href="styles/contact.css" />
+    <title>Adventure Tours | WWR | Home</title>
 </head>
+
 <body>
-    <div id="feedback">
-    <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-    </header>
-    <main class="contact">
-       <div class="content">
-        <h2>Contact Us</h2>
-        <p>Welcome To Our Dry OAR Contact Page, Please We At Your Service</p>
-       </div>
-       <div class="container">
-        <div class="contactinfo">
-            <div class="box">
-                <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
-                <div class="text">
-                    <h3>Address</h3>
-                    <p>Post Office Box BP 30,<br>Bantama,Kumasi,<br>AK-800-8181</p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="icon"><i class="fa-solid fa-phone"></i></div>
-                <div class="text">
-                    <h3>Phone</h3>
-                    <p>+2335-5457-1520</p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="icon"><i class="fa-solid fa-envelope"></i></div>
-                <div class="text">
-                    <h3>Email</h3>
-                    <p>pintechofficial@gmail.com</p>
-                </div>
-            </div>
-        </div>
-        <div class="contactform">
-            <form>
-                <h2>Send Message</h2>
-                <div class="inputBox">
-                    <input type="text" name="" required="required">
-                    <span>Full name</span>
-                </div>
-                <div class="inputBox">
-                    <input type="text" name="" required="required">
-                    <span>Email</span>
-                </div>
-                <div class="inputBox">
-                    <textarea required="required"></textarea>
-                    <span>Type your Message...</span>
-                </div>
-                <div class="inputBox">
-                    <input type="submit" name="" value="send">
-                </div>
-            </form>
-        </div>
-       </div>
-    </main>
-    <footer>
-        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" alt="Adventures" src="images/logo.png">
             </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
-    </footer>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="rivers.html">Rivers Page</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
+            </nav>
+        </header>
+        <div id="feedback"></div>
+        <form action="/my-handling-form-page" method="post">
+            <ul>
+              <li>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="user_name" />
+              </li>
+              <li>
+                <label for="mail">E-mail:</label>
+                <input type="email" id="mail" name="user_email" />
+              </li>
+              <li>
+                <label for="msg">Message:</label>
+                <textarea id="msg" name="user_message"></textarea>
+              </li>
+              <li class="button">
+                <button type="submit" class="btn">Submit</button>
+              </li>
+            </ul>
+          </form>
+        <footer>
+            <h3>Dry Oar &copy; 2022 - Owusu Manu Emmanuel</h3>
+            <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 
-</div>
-
-    
-<script>
-    // get the feedback div element so we can do something with it.
-    const feedbackElement = document.getElementById('feedback');
-    // get the form so we can read what was entered in it.
-    const formElement = document.forms[0];
-    // add a 'listener' to wait for a submission of our form. When that happens run the code below.
-    formElement.addEventListener('submit', function(e) {
-        // stop the form from doing the default action.
-        e.preventDefault();
-        // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
-        feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message. We will get back with you as soon as possible!';
-        // make the feedback element visible.
-        feedbackElement.style.display = "block";
-        // add a class to move everything down so our message doesn't cover it.
-        document.body.classList.toggle('moveDown');
-    });
-</script>
+    <script>
+        // get the feedback div element so we can do something with it.
+        const feedbackElement = document.getElementById('feedback');
+        // get the form so we can read what was entered in it.
+        const formElement = document.forms[0];
+        // add a 'listener' to wait for a submission of our form. When that happens run the code below.
+        formElement.addEventListener('submit', function(e) {
+            // stop the form from doing the default action.
+            e.preventDefault();
+            // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
+            feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message. We will get back with you as soon as possible!';
+            // make the feedback element visible.
+            feedbackElement.style.display = "block";
+            // add a class to move everything down so our message doesn't cover it.
+            document.body.classList.toggle('moveDown');
+        });
+    </script>
 </body>
+
 </html>
