--- a/wdd130/week1/own/about.html
+++ b/wdd130/week1/own/about.html
@@ -29,8 +29,8 @@
         </a>
         <nav>
             <a href="personal-web.html">Home</a>
-            <a href="about.html">Skill</a>
-            <a href="#">Note</a>
+            <a href="about.html">About</a>
+            <a href="#">Contact Me</a>
             <!-- <a href="contactus.html">Contact Us</a> -->
         </nav>
     </header>
