--- a/wdd130/week1/own/site-plan.html
+++ b/wdd130/week1/own/site-plan.html
@@ -95,19 +95,19 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
+      <a href="#">Home</a>
       <a href="#">About</a>
-      <a href="#">Page 2</a>
-      <a href="#">Page 3</a>
+      <a href="#">Contact Me</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
     <div class="sitemap">
-      <div class="sm-home">About</div>
+      <div class="sm-home">Home</div>
       <div class="sm-page2">
         [About]
         <!-- this page will have a name later -->
       </div>
-      <div class="sm-page3">Note</div>
+      <div class="sm-page3">Contact Me</div>
 
       <div class="top">&nbsp;</div>
       <div class="left">&nbsp;</div>
@@ -115,14 +115,18 @@
     </div>
     <hr />
     <h3>Home Page Images</h3>
-    <p>Which consist of the cloud image and the mountain image</p>
+    <h3>Hello</h3>
+    <p>I am an iOS and Web Developer. I'm the founder and CTO pintech Engineering Services. I ❤️ American Football and listeng to music.</p>
     <img src="images/cloud.png" alt="home page images">
     <img src="images/mountain.png">
-    <h3>Work Page</h3>
+    <h3>My Skills</h3>
     <p>this images are to show trust to my customers or those who will be doing bussiness with me.</p>
-    <h3>Hi. I’m Owusu Manu.</h3>
-        <h3>A Designer.</h3>
-    <p>I'm likewise a front-end engineer and graphic designer with passion for making drawing in UI, rejuvenating items.</p>
+    <h3>Design & Development</h3>
+    <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications..</p>
+    <h3>Hot Wings Challenge</h3>
+    <p>But my best skill is actually in eating hot wings. I am the undisputed kking of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
+    <h3>Get In Touch</h3>
+    <p>Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!</p>
     <img src="images/second.png">
     <img src="images/trust_icon.png" alt="trust image">
     <h3>Note Page</h3>
@@ -137,17 +141,24 @@
     <img src="images/equality_icon.png" alt="equality icon">
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
+    <h3>About Me</h3>
+    <h3>Developer & Designer</h3>
+    <p>I am a front-end web Developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. I can provide clean code and pixel perfect design. A responsive design makes your website accessible to all users, regardless of their device.</p>
+    <h3>Let Talk</h3>
+    <h3>What I Can Do</h3>
+    <h3>Web Development</h3>
+    <p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
     <h3>About</h3>
 
-    <img src="images/home-page.png" alt="home page wireframe" />
+    <img src="images/hom-page.png" alt="home page wireframe" />
 
     <h3>[work]</h3>
-    <p>At this page i save all the projects that i have done so far</p>
-    <img src="images/work.png" alt="potfolio-section">
+    <p>this page is about the details of my skills</p>
+    <img src="images/skill-page.png" alt="potfolio-section">
     <h3>Note</h3>
-    <p>this is the Note Section and it comprises of new ways of developing sotware and new prices</p>
-    <img src="images/note.png">
+    <p>this is the contact me page to recieve messages</p>
+    <img src="images/contact.png">
     </main>
   
 </body>
