--- a/wdd130/week1/byui.html
+++ b/wdd130/week1/byui.html
@@ -10,15 +10,15 @@
 <body>
   <header>
     <h1>Welcome to WDD130 Web Projects</h1>
-    <ul>
-     <nav>
+    <nav>
+     <ul>
        <li><a href="wwr/index.html">White Water Rafting Website</a></li>
        <li><a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a></li>
        <li><a href="positioning.html">Positioning Activity</a></li>
        <li><a href="own/personal-web.html">Personal Website</a></li>
-       <li><a href="own/site-plan.html">Personal Siteplan</a></li>
-     </nav>
-  </ul>  
+       <li><a href="own/site-plan.html">Personal Siteplan</a></li>  
+     </ul> 
+   </nav> 
     <p>Owusu Emmanuel Manu - WDD130</p>
   </header>
   <main>
@@ -26,7 +26,7 @@
     
   </main>
   <footer>
-    <p>My First Web Page 20XX &copy</p>
+    <p>My First Web Page 2022 &copy;</p>
   </footer>
 </body>
 </html>
