--- a/wdd130/week1/own/personal-web.html
+++ b/wdd130/week1/own/personal-web.html
@@ -29,7 +29,7 @@
         <nav>
             <a href="personal-web.html">Home</a>
             <a href="about.html">about</a>
-            <a href="#">Contact Me</a>
+            <a href="contact-me.html">Contact Me</a>
             <!-- <a href="contactus.html">Contact Us</a> -->
         </nav>
     </header>
