--- a/wdd130/week1/own/site-plan.html
+++ b/wdd130/week1/own/site-plan.html
@@ -151,14 +151,14 @@
 
     <h3>About</h3>
 
-    <img src="images/hom-page.png" alt="home page wireframe" />
+    <img src="images/final-3.png" alt="home page wireframe" />
 
     <h3>[work]</h3>
     <p>this page is about the details of my skills</p>
-    <img src="images/skill-page.png" alt="potfolio-section">
+    <img src="images/final-2.png" alt="potfolio-section">
     <h3>Note</h3>
     <p>this is the contact me page to recieve messages</p>
-    <img src="images/contact.png">
+    <img src="images/final-1.png">
     </main>
   
 </body>
