--- a/wdd130/week1/own/about.html
+++ b/wdd130/week1/own/about.html
@@ -30,7 +30,7 @@
         <nav>
             <a href="personal-web.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Contact Me</a>
+            <a href="contact-me.html">Contact Me</a>
             <!-- <a href="contactus.html">Contact Us</a> -->
         </nav>
     </header>
@@ -86,6 +86,7 @@
     <!-- footer section -->
     <footer>
         <p>Yawus &copy; 2022 - Owusu Manu Emmanuel</p>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
