--- a/wdd130/week1/own/contact-me.html
+++ b/wdd130/week1/own/contact-me.html
@@ -44,8 +44,8 @@
           </form>
         <footer>
             <h3>Yawus &copy; 2022 - Owusu Manu Emmanuel</h3>
-            <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-            <h3><a href="contactus.html">Contact Us</a></h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a href="contact-me.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
