--- a/wdd130/week1/own/personal-web.html
+++ b/wdd130/week1/own/personal-web.html
@@ -84,6 +84,7 @@
     <!-- footer section -->
     <footer>
         <p>Yawus &copy; 2022 - Owusu Manu Emmanuel</p>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
